fix: overflow

--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ li a:hover{
 .musica{
     margin: 100px 0;
     width:calc(100% - 10px);
-    overflow-y: scroll;
+    overflow-y: auto;
     color: #a3a3a3;
 }
 
